chore: Fix z-index so bar doesn't cover search

--- a/src/components/layout/search-autocomplete.module.scss
+++ b/src/components/layout/search-autocomplete.module.scss
@@ -5,6 +5,7 @@
   border: none;
   font-size: 1rem;
   position: absolute;
+  z-index: 100;
   width: 100%;
   left: 0;
   font-weight: normal;
